Changed section width from 100vw to 100% to avoid horizontal scrolling when vertical scrollbars are enforced

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,7 +72,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     padding-top: 2rem;
 }
 
